--- a/inicio/style.css
+++ b/inicio/style.css
@@ -6,12 +6,12 @@
 
 header{
     width: 100%;
-    height: 4em;
+    height: 4em ;
     background-color: #134a13;
     display: flex;
     align-items: center;
     justify-content: center;
-    box-shadow: #000 14px 14px 13px;
+    box-shadow: #000 3px 4px 4px;
 }
 
 a{
@@ -32,6 +32,14 @@ main{
     background-image: linear-gradient(45deg,  #F3EFE0, #434242, #222222);
     background-size: 400% 400%;
     animation: color 15s ease infinite;
+    gap: 30px;
+}
+
+@media( max-width: 750px){
+        main{
+            height: max-content;
+            
+        }
 }
 
 @keyframes color {
